<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="22sp"/>
        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:id="@+id/editCityText"
            android:hint="@string/FillCity"
            android:maxLines="1"
            android:singleLine = "true"
            android:inputType="textCapWords"
             />
        <Button
            android:id="@+id/BottonAdd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:text="@string/ButtonAdd"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/CityList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>