<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        >
        <Button
            android:id="@+id/ButtonBack"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_menu_back"
            android:text="@string/Back"
            android:textSize="22sp"
            android:textColor="#FFF"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/CityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/City"
             />
        <TextView
            android:id="@+id/CityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nullText"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CommunityLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/CityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Community"
            />
        <TextView
            android:id="@+id/CommunityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nullText"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CountyLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/CommunityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/County"
            />
        <TextView
            android:id="@+id/CountyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nullText"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ProvinceLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/CountyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Province"
            />
        <TextView
            android:id="@+id/ProvinceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nullText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/KrajLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ProvinceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/CountryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nullText"
            />
    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>